<resources>
    <string name="app_name">URGameGuru</string>
    <string name="title_my_expo">My Expo</string>
    <string name="title_gurus">Gurus</string>
    <string name="title_settings">Settings</string>
    <string name="text_sign_up">Sign up</string>
    <string name="hint_search">Search games, gurus or guides</string>
    <string name="label_fps">FPS</string>
    <string name="label_rpg">RPG</string>
    <string name="label_rts">RTS</string>
    <string name="label_moba">MOBA</string>
    <string name="label_action">Action</string>
    <string name="label_sports">Sports</string>
    <string name="label_racing">Racing</string>
    <string name="label_casual">Casual</string>
    <string name="label_adventure">Adventure</string>
    <string name="label_simulation">Simulation</string>
    <string name="label_strategy">Strategy</string>
    <string name="label_building">Building</string>
    <string name="label_card">Card</string>
    <string name="label_team">Team</string>
    <string name="label_grand">Grand</string>
    <string name="label_space">Space</string>

    <string name="label_screenshots">screenshots</string>
    <string name="label_clips">clips</string>
    <string name="label_articles">articles</string>

    <string name="text_most_popular">Most popular</string>
    <string name="text_most_recent">Most recent</string>
    <string name="tmp_wild_rift">Wild Rift</string>
    <string name="tmp_bfv">Battlefield V</string>
    <string name="tmp_gtav">GTA V</string>
    <string name="label_1">1</string>
    <string name="label_2">2</string>
    <string name="label_3">3</string>
    <string name="label_4">4</string>
    <string name="label_5">5</string>
    <string name="label_place_holder">...</string>
    <string name="label_codemania">Codemania X</string>
    <string name="hint_bio">Edit your bio here!</string>
    <string name="label_about">About</string>
    <string name="label_contact_us">Contact us</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="title_activity_article_list">ArticleListActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="game_thought">Game Thought</string>
    <string name="game_review">Game Review</string>
    <string name="game_guide">Game Guide</string>
    <string name="title_activity_comment_list">CommentListActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="top_comment">Top Comments</string>
    <string name="recent_comment">Recent Comments</string>
    <string name="label_developer">"Developer: "</string>
    <string name="upload">Upload</string>

    <string name="title_login_activity">LoginActivity</string>
    <string name="label_test_image">test_image</string>
    <string name="label_select_image">Select Image</string>
    <string name="label_select_video">Select Video</string>
    <string name="label_select">Select image / video</string>
    <string name="label_name">Name</string>
    <string name="hint_add_title">Add a title</string>
    <string name="label_edit">Edit</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_add">Add</string>
    <string name="number_zero">0</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_log_in">Log in</string>
    <string name="comment_text">Comment text</string>
    <string name="label_add_comment">Add comment</string>
    <string name="label_my_comment">My comment</string>
    <string name="label_submit">Submit</string>
    <string name="game_name">Game name</string>
    <string name="hint_rate">Rate (0~5)</string>
    <string name="label_comment_date">31–03-2020</string>
    <string name="hint_in_maintenance">Sorry, the function is under maintenance :)</string>
    <string name="hint_page_in_maintenance">Sorry, the page is under maintenance :)</string>
    <string name="hint_function_in_maintainance">Sorry, the function is under maintenance :)</string>
    <string name="dash">-</string>
    <string name="label_articles_cap">Articles</string>
</resources>