<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_expo">

    <fragment
        android:id="@+id/navigation_my_expo"
        android:name="com.example.urgameguru.my_expo.MyExpoFragment"
        android:label="@string/title_my_expo"
        tools:layout="@layout/fragment_my_expo" />

    <fragment
        android:id="@+id/navigation_gurus"
        android:name="com.example.urgameguru.gurus.GurusFragment"
        android:label="@string/title_gurus"
        tools:layout="@layout/fragment_gurus" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.urgameguru.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>