<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.UploadMediaActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_select"
        android:gravity="center"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_upload_preview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"/>

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/pv_upload_preview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_media_name"
        android:hint="@string/label_name"
        android:textAlignment="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="invisible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/upload"/>

    <ProgressBar
        android:id="@+id/pb_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"/>

</androidx.appcompat.widget.LinearLayoutCompat>